Fix for JRUBY-1495, patch by Pat Cheng.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@5118 961051c9-f516-0410-bf72-c9f7e237a7b7