@@ -331,7 +331,7 @@ public class SafeConstructorImpl extends BaseConstructorImpl {
             }
             return new Double(sign*val);
         } else {
-            return Double.valueOf(value);
+            return new Double(sign*Double.parseDouble(value));
         }
     }    
 
